--- a/nobackground.css
+++ b/nobackground.css
@@ -212,9 +212,9 @@ a:link:hover {}
 a:hover {text-decoration:underline;outline:none;}
 a:visited {color:#0077B6;text-decoration:none;outline:none;}
 ::selection{background:rgba(0, 0, 0, 0.1);color:#999;}
-#outer-wrapper{width: 1120px;margin: 0px auto;padding: 0px;}
+#outer-wrapper{width: 1120px;background-color:rgba(0,0,0,0.6);margin: 0px auto;padding: 0px;}
 #main-wrap{width: 800px;float: left;}
-#sidebar-wrap{width:250px;float:left;margin:0px 5px;}
+#sidebar-wrap{width:290px;height:100%;float:left;margin:0px 5px;}
 #content-wrapper{padding: 10px;margin:auto;-webkit-box-shadow: 0 0 3px #CCC;-moz-box-shadow: 0 0 3px #CCC;box-shadow: 0 0 3px #CCC;border-radius: 0px;}
 h1, h2, h3, h4, h5{font-weight:700;}
 h1{font-size:0em;margin:0;}
@@ -233,7 +233,7 @@ h6{font-size:0.75em;margin:2.33em 0;}
 .ketua {font-size: 10px;text-align: right;font-family: &#39;Yantramanav&#39;, sans-serif;color: #FFF;background-color: #3A3A3A;padding: 0px 6px;float: right;font-weight: normal;margin: 50px 0px;}
 .likers {margin:0px 0px;}
 .post-footer, .post-inf{color: #dfe6f5;line-height: 19px;margin: 4px 0px;font-size: 11.5px;float: left;font-family: Arial;}
-.rapibgtcoeg {width:100%;margin:0 0;padding:0 0;background-color:rgba(0,0,0,0.6);}
+.rapibgtcoeg {width:100%;margin:0 0;padding:0 0;}
 nav {height: 50px;width: 1120px;margin: 0 auto;background-color: #F0F0F0;border: 1px solid #ddd;margin-bottom: 15px;}
 .menu {display: block;margin: 0px auto;margin-bottom: 10px;width: 100%;}
 .menu li {display: inline-block;position: relative;z-index: 100;}
