--- a/nobackground.css
+++ b/nobackground.css
@@ -59,8 +59,7 @@ background:#222;color:#fff!important;transition:all .3s ease-out;}
 #shadow{display:none;position:fixed;left:0;top:0;bottom:0;background:rgba(0,0,0,0.93);width:100%;height:100%;z-index:100;transition:all .5s ease}
 .player {
  position: relative;
- padding-bottom: 56.25%; /* 16:9 */
- padding-top: 25px;
+ padding-bottom: 50%;
  height: 0;
 }
 .player iframe, video, object, embed {
