--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ background:#222;color:#fff!important;transition:all .3s ease-out;}
  height: 100%;
  z-index:1500;
 }
+.mp4{position: relative;padding-bottom:55%;height: 0;}.mp4 iframe, video, object, embed {position: absolute;top:0;left:0;width:100%;height:100%;z-index:1500;}
 .download{
   	background:#2C97DF;
   	color:white;
