--- a/test2.css
+++ b/test2.css
@@ -179,7 +179,7 @@ h3.dl-title{background: #151414;margin: 0 0 1px;padding: 10px 5px 35px 5px;color
 .adsbig{float:left;background:#F7F7F7;padding:3px;border:1px solid #D5D5D5;}
 .post {margin: 0 17px 10px 10px;padding: 0 10px 10px;line-height: 25px;}
 h1.post-title {width:715px;margin: 1px;font-size: 150%;border-bottom: 2px solid #999;background: rgba(0,0,0,0.6);color:#dfe6f5;background-color:rgba(0,0,0,0.6);padding: 5px;font-family: &#39;Yantramanav&#39;, sans-serif;border-radius: 0 0px 0px 0;}  
-#comments {margin: 10px;padding-bottom:5px;border-bottom:2px solid #ddd;}
+#comments {clear:both;margin: 10px;padding-bottom:5px;border-bottom:2px solid #ddd;}
 #comment-editor {width: 100%;}
 .comments h4 {text-align: right;margin: 10px;text-transform: uppercase;}
 .avatar-image-container img {width: 45px;height: 45px;}
