--- a/test2.css
+++ b/test2.css
@@ -213,7 +213,7 @@ a:visited {color:#dfe6f5;text-decoration:none;outline:none;}
 #outer-wrapper{margin: 0px auto;padding: 0px;}
 #main-wrap{width: 650px;float: left;}
 #sidebar-wrap{width:290px;height:100%;float:right;margin:0px 5px;}
-#content-wrapper{width:1050px;height:100%;padding: 10px;margin:auto;background:#0a0a0a;border:1px solid #323232;}
+#content-wrapper{width:1050px;height:100%;padding: 10px;margin:auto;background:rgba(0,0,0,0.6);border:1px solid #323232;}
 h1, h2, h3, h4, h5{font-weight:700;}
 h1{font-size:0em;margin:0;}
 h2{font-size:1.5em;margin:0.83em 0;}
