--- a/test2.css
+++ b/test2.css
@@ -202,7 +202,7 @@ li.comment .blog-author:after {border-color: #336CDB !important;}
 #BounceToTop:before {content:&quot;&quot;; position:absolute; bottom:5px; right:5px; width:0; height:0; border-style:solid; border-width:0 15px 20px 15px; border-color:transparent transparent #fff transparent; line-height:0;}
 #BounceToTop:hover:before {content:&quot;&quot;; position:absolute; bottom:5px; right:5px; width:0; height:0; border-style:solid; border-width:0 15px 20px 15px; border-color:transparent transparent #333 transparent; line-height:0 }
 #BounceToTop:after {content:&quot;&quot;; position:absolute; bottom:5px; right:11px; width:0; height:0; border-style:solid; border-width:0 9px 12px 9px; border-color:transparent transparent #2980B9 transparent; line-height:0;}
-body {background-image:url(//3.bp.blogspot.com/-HP3Z9-3E6FI/WEAshRjpMmI/AAAAAAAAADw/XRl5ljmQ84AKWUj_R6lholLCIciXCiLCQCLcB/s1600/background.jpg);background-position:top center;background-size:cover;background-attachment:fixed;background-repeat:no-repeat;min-width:1120px;margin:0 auto}
+body {background:#1B1B1B;background-image:url(//3.bp.blogspot.com/-HP3Z9-3E6FI/WEAshRjpMmI/AAAAAAAAADw/XRl5ljmQ84AKWUj_R6lholLCIciXCiLCQCLcB/s1600/background.jpg);background-position:top center;background-size:cover;background-attachment:fixed;background-repeat:no-repeat;min-width:1120px;margin:0 auto}
 #header-wrap {overflow:hidden;padding:10px 0;background:#0a0a0a}
 a:focus {outline:thin dotted;}
 a:link {transition:color 0.4s;outline:none;text-decoration:none;}
