--- a/test2.css
+++ b/test2.css
@@ -56,7 +56,7 @@ background:#222;color:#fff!important;transition:all .3s ease-out;}
 .infovid{overflow:hidden;margin-top:10px;font-size:13px;padding-bottom:5px;margin-bottom:1px}.infovid .left{float:left}.infovid .left span{border-radius:0px;padding:1px 10px;color:#a2a2a2;display:block;float:left;margin-right:5px;border:1px solid #323232}.infovid .left span a{color:#a2a2a2}.infovid .right{float:right}.infovid .right .download1 a{background:#003A59;color:#DDD;display:block;border-radius:4px;padding:0 7px;line-height:24px;font-weight:bold;font-family:titillium}.infovid .right .download1 a:hover{background:#003A80;text-decoration:none}
 .lightSwitcher{position:absolute;z-index:600;outline:none;text-decoration:none;right:1px;top:2px;color:#DDD;font-size:11px;font-weight:bold;cursor:pointer;font-family:titillium;border-radius:4px;padding:0 7px;line-height:20px;background:#003A59;}
 .headpost{overflow:hidden;position:relative;margin-bottom:10px}.headpost h1{font-weight:700;float:left;width:510px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size:16px;line-height:23px}.headpost .bottomtitle{line-height:15px;color:#838383;font-size:11px;padding-bottom:8px;margin-top:5px;margin-bottom:0px}
-#shadow{display:none;position:fixed;left:0;top:0;bottom:0;background:rgba(0,0,0,0.93);width:100%;height:100%;z-index:100;transition:all .5s ease}
+#shadow{display:none;position:fixed;left:0;top:0;bottom:0;background:rgba(0, 0, 0, 0.701961);width:100%;height:100%;z-index:100;transition:all .5s ease}
 .player {
  position: relative;
  padding-bottom: 50%;
