--- a/test2.css
+++ b/test2.css
@@ -231,7 +231,7 @@ h6{font-size:0.75em;margin:2.33em 0;}
 .ketua {font-size: 10px;text-align: right;font-family: &#39;Yantramanav&#39;, sans-serif;color: #FFF;background-color: #3A3A3A;padding: 0px 6px;float: right;font-weight: normal;margin: 50px 0px;}
 .likers {margin:0px 0px;}
 .post-footer, .post-inf{color: #dfe6f5;line-height: 19px;margin: 4px 0px;font-size: 11.5px;float: left;font-family: Arial;}
-.rapibgtcoeg {width:100%;margin:0 0;padding:0 0;}
+.sadameku {width:100%;margin:0 0;padding:0 0;}
 nav {height: 50px;width: 1120px;margin: 0 auto;background-color: #F0F0F0;border: 1px solid #ddd;margin-bottom: 15px;}
 .menu {display: block;margin: 0px auto;margin-bottom: 10px;width: 100%;}
 .menu li {display: inline-block;position: relative;z-index: 100;}
